# cpp_template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/my_project/: test_class.h
src/my_project/: test_class.cpp
tests/: test_main.cpp
